--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
       <p class="aap ta-l fadeUpTrigger">私たちについて</p>
       <div id="aboutus_a">
         <div id="aboutus_img">
-          <img class="d-ib fadeUpTrigger" id="ai-1" src="img/kari/carry1.jpg" alt="グリーンカレー">
-          <img class="d-ib fadeUpTrigger" id="ai-2" src="img/kari/cakea.jpg" alt="ティラミス">
+          <img class="d-ib fadeUpTrigger" id="ai-1" src="img/kari/c.jpg" alt="カレー">
+          <img class="d-ib fadeUpTrigger" id="ai-2" src="img/kari/c1.jpg" alt="コーヒー">
         </div>
         <div class="fadeUpTrigger" id="aboutus_b">
           <p id="ap">あなたと<br>わたしの<br>カフェ。</p>
@@ -91,12 +91,12 @@
       <h2>Photo</h2>
         <p class="sub_t photo_bp fadeUpTrigger">旬なものを、旬なときに。</p>
         <div id="photo_b" class="fadeUpTrigger">
-          <img  src="img/kari/carry1.jpg" alt="">
-          <img  src="img/kari/toast.jpg" alt="">
-          <img  src="img/kari/pasta2.jpg" alt="">
-          <img  src="img/kari/cake2.jpg" alt="">
-          <img  src="img/kari/coffee.jpg" alt="">
-          <img  src="img/kari/maccha.jpg" alt="">
+          <img  src="img/kari/c3.jpg" alt="">
+          <img  src="img/kari/c4.jpg" alt="">
+          <img  src="img/kari/c5.jpg" alt="">
+          <img  src="img/kari/c8.jpg" alt="">
+          <img  src="img/kari/c7.jpg" alt="">
+          <img  src="img/kari/c6.jpg" alt="">
         </div>
         <div class="btn-4 fadeUpTrigger"><a href="photo.html">VIEW MORE</a></div>
       </div>
@@ -108,7 +108,7 @@
         <h2 class="fadeUpTrigger">ONLINE SHOP</h2>
         <p class="sub_t fadeUpTrigger">特別な人へ、特別な日に。</p>
           <div id="onl_p">
-            <img  src="img/kari/cookie.jpg" alt="クッキー" class="fadeUpTrigger">
+            <img  src="img/kari/c9.jpg" alt="クッキー" class="fadeUpTrigger">
             <div id="onl_pp" class="fadeUpTrigger">
               <p>U-cafe特製のチーズケーキや、<br>ギフトクッキーをお作りします。</p>
               <div class="btn-3 fadeUpTrigger"><a href="shop.html">詳細をみる</a></div>
@@ -135,7 +135,7 @@
               <li><span>・</span><a  class="hov_03 fadeUpTrigger"href="https://goo.gl/maps/MC3WfkHtdPCM2Z4o7" target="_blank">Googleマップ</a></li>
             </ul>
           </div>
-          <img class="fadeUpTrigger" src="img/kari/cake3.jpg" alt="">
+          <img class="fadeUpTrigger" src="img/kari/c10.jpg" alt="">
           <div class="map_a d-f jc-c fadeUpTrigger">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3352.3572083407203!2d130.77374501526725!3d32.835792580954234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3540f049e8e1dad7%3A0x185dff74559cf361!2sU-cafe!5e0!3m2!1sja!2sjp!4v1627033029345!5m2!1sja!2sjp" width="950" height="530" style="border:0;" allowfullscreen="" ></iframe>
           </div>
@@ -146,11 +146,10 @@
           <img loading="lazy" class="main_con_i fadeUpTrigger" src="img/u-cafe-logo_black.png" alt="ロゴ黒">
           <p class="main_con_p fadeUpTrigger">You and Me Café</p>
           <div class="main_cons d-f jc-c fadeUpTrigger">
-            <div class="main_con_i_1"></div>
-            <div class="main_con_i_2"></div>
+            <img src="img/kari/footer.jpg" alt="">
           </div>
           <div class="btn-5 fadeUpTrigger">
-            <a href="contact.html">
+            <a href="contact.php">
               <div class="con_1 fadeUpTrigger">
                 <h3>Contact</h3>
                 <p class="con_2">U-cafeへのお問い合わせはこちらから</p>
