--- a/photo.html
+++ b/photo.html
@@ -34,7 +34,7 @@
                 <li><a class="hov_nav_b" href="photo.html">PHOTO</a></li>
                 <li><a class="hov_nav_b" href="shop.html">ONLINE SHOP</a></li>
                 <li><a class="hov_nav_b" href="index.html#access">ACCESS</a></li>
-                <li><a class="hov_nav_b" href="contact.html">CONTACT</a></li>
+                <li><a class="hov_nav_b" href="contact.php">CONTACT</a></li>
                 <li><a href="https://www.instagram.com/u_cafe_201710/?hl=ja" target="_blank"><img src="img/glyph-logo_May2016.png" alt="黒"><img class="insta_hov" src="img/insta_color.png" alt="カラー "></a></li>
               </ul>
             </div>
@@ -48,8 +48,20 @@
         <h2 class="fadeUpTrigger">Photo</h2>
         <p class="sub_t fadeUpTrigger">オイシイ記録。</p>
         <div id="photo_inner" class="d-f fd-c ai-c">
-          <img loading="lazy" class="photo_t d-b fadeUpTrigger" src="img/kari/cake2.jpg" alt="">
-          <img loading="lazy" src="img/kari/maccha.jpg" alt="" class="photo_y d-b fadeUpTrigger">
+          <img loading="lazy" class="d-b fadeUpTrigger" src="img/kari/a2.jpg" alt="">
+          <img loading="lazy" class="d-b fadeUpTrigger" src="img/kari/a3.jpg" alt="">
+          <img loading="lazy" class="d-b fadeUpTrigger" src="img/kari/a4.jpg" alt="">
+          <img loading="lazy" class="d-b fadeUpTrigger" src="img/kari/a1.jpg" alt="">
+          <img loading="lazy" class="d-b fadeUpTrigger" src="img/kari/a5.jpg" alt="">
+          <img loading="lazy" class="d-b fadeUpTrigger" src="img/kari/a6.jpg" alt="">
+          <img loading="lazy" class="d-b fadeUpTrigger" src="img/kari/a7.jpg" alt="">
+          <img loading="lazy" class="d-b fadeUpTrigger" src="img/kari/a14.jpg" alt="">
+          <img loading="lazy" class="d-b fadeUpTrigger" src="img/kari/a8.jpg" alt="">
+          <img loading="lazy" class="d-b fadeUpTrigger" src="img/kari/a9.jpg" alt="">
+          <img loading="lazy" class="d-b fadeUpTrigger" src="img/kari/a10.jpg" alt="">
+          <img loading="lazy" class="d-b fadeUpTrigger" src="img/kari/a11.jpg" alt="">
+          <img loading="lazy" class="d-b fadeUpTrigger" src="img/kari/a12.jpg" alt="">
+          <img loading="lazy" class="d-b fadeUpTrigger" src="img/kari/a13.jpg" alt="">
         </div>
       </div>
       <!-- /.inner -->
@@ -59,11 +71,10 @@
           <img loading="lazy" class="main_con_i fadeUpTrigger" src="img/u-cafe-logo_black.png" alt="ロゴ黒">
           <p class="main_con_p fadeUpTrigger">You and Me Café</p>
           <div class="main_cons d-f jc-c fadeUpTrigger">
-            <div class="main_con_i_1"></div>
-            <div class="main_con_i_2"></div>
+            <img src="img/kari/footer.jpg" alt="">
           </div>
           <div class="btn-5 fadeUpTrigger">
-            <a href="contact.html">
+            <a href="contact.php">
               <div class="con_1 fadeUpTrigger">
                 <h3>Contact</h3>
                 <p class="con_2">U-cafeへのお問い合わせはこちらから</p>
@@ -76,7 +87,7 @@
           </div>
         </div>
       </main>
-      <footer>
+      <footer class="fadeUpTrigger">
         <small>Copyright &copy Sheepontaneous,All rights reserved.</small>
       </footer>
       <script src="script.js"></script>
