--- a/shop.html
+++ b/shop.html
@@ -34,7 +34,7 @@
                 <li><a class="hov_nav_b" href="photo.html">PHOTO</a></li>
                 <li><a class="hov_nav_b" href="shop.html">ONLINE SHOP</a></li>
                 <li><a class="hov_nav_b" href="index.html#access">ACCESS</a></li>
-                <li><a class="hov_nav_b" href="contact.html">CONTACT</a></li>
+                <li><a class="hov_nav_b" href="contact.php">CONTACT</a></li>
                 <li><a href="https://www.instagram.com/u_cafe_201710/?hl=ja" target="_blank"><img src="img/glyph-logo_white.png" alt="白"><img class="insta_hov" src="img/glyph-logo_May2016.png" alt="黒"></a></li>
               </ul>
             </div>
@@ -55,9 +55,9 @@
           <div class="sp-item-d d-f jc-sb">
 
             <article class="gallery">
-              <a class="hov d-b" href="sp_ch-plane.html">
+              <a class="hov d-b" href="sp_ch-plane.php">
                 <figure class="fadeUpTrigger">
-                  <img loading="lazy" src="img/kari/cake3.jpg" alt="プレーンチーズケーキ">
+                  <img loading="lazy" src="img/kari/d1.jpg" alt="プレーンチーズケーキ">
                 </figure>
                 <div class="txt ta-c">
                   <div class="pp fadeUpTrigger">CHEESECAKE -PLANE-</div>
@@ -67,9 +67,9 @@
             </article>
 
             <article class="gallery">
-              <a class="hov d-b" href="sp_ch-maccha.html">
+              <a class="hov d-b" href="sp_ch-maccha.php">
                 <figure class="fadeUpTrigger">
-                  <img loading="lazy" src="img/kari/cake3.jpg" alt="抹茶">
+                  <img loading="lazy" src="img/kari/m1.jpg" alt="抹茶">
                 </figure>
                 <div class="txt ta-c">
                   <div class="pp fadeUpTrigger">CHEESECAKE -MACCHA-</div>
@@ -87,9 +87,9 @@
 
           <div class="sp-item-d d-f jc-sb">
             <article class="gallery">
-              <a class="hov d-b" href="sp_cookie.html">
+              <a class="hov d-b" href="sp_cookie.php">
                 <figure class="fadeUpTrigger">
-                  <img loading="lazy" src="img/kari/cake3.jpg" alt="抹茶">
+                  <img loading="lazy" src="img/kari/k1.jpg" alt="抹茶">
                 </figure>
                 <div class="txt ta-c">
                   <div class="pp fadeUpTrigger">EVENT COOKIE</div>
@@ -110,11 +110,10 @@
           <img loading="lazy" class="main_con_i fadeUpTrigger" src="img/u-cafe-logo_black.png" alt="ロゴ黒">
           <p class="main_con_p fadeUpTrigger">You and Me Café</p>
           <div class="main_cons d-f jc-c fadeUpTrigger">
-            <div class="main_con_i_1"></div>
-            <div class="main_con_i_2"></div>
+            <img src="img/kari/footer.jpg" alt="">
           </div>
           <div class="btn-5 fadeUpTrigger">
-            <a href="contact.html">
+            <a href="contact.php">
               <div class="con_1 fadeUpTrigger">
                 <h3>Contact</h3>
                 <p class="con_2">U-cafeへのお問い合わせはこちらから</p>
