--- a/shop.html
+++ b/shop.html
@@ -46,7 +46,7 @@
     <div class="inner d-f fd-c ai-c" id="shop_inner">
       <h2 class="fadeUpTrigger">Online Shop</h2>
       <p class="sub_t fadeUpTrigger">大切な人へ。</p>
-      <p class="text_a ta-c fadeUpTrigger">TOFU(豆腐)×COFFEE(コーヒー) = TOFFEE(トーフィー)<br>「早くて、カラダに良くて、おいしい。」<br>いつでも手軽に口にでき、健康的な生活について考えることができ、しかも美味しい。<br>そんなメニューを発信する「TOFFEE」の人気商品をご家庭にお届けします。</p>
+      <p class="text_a ta-c fadeUpTrigger">元パティシエのこだわりを大切な人に。<br>「カラダに良くて、見た目も良くて、おいしい。」<br>特別な日に、いつもよりもちょっとだけ贅沢なものを。<br>U-cafeのこだわりが、大切な日の彩りをお手伝いします。</p>
       <div class="shop-items">
         <!-- ↓CHEESECAKE -->
         <div class="sp-item">
