--- a/index.html
+++ b/index.html
@@ -30,8 +30,27 @@
           <!-- nav -->
           <div class="nav">
             <h1><a class="hov" href="/"><img src="img/u-cafe-logo_white.png" alt="ロゴ。u-cafe.あなたとわたしのカフェ。| 熊本市東区"></a></h1>
+            <!-- ハンバーガーメニューボタン -->
+            <div class="toggle">
+                <div>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
             <!-- header nav ul li -->
-            <div class="nav_li">
+            <div class="nav_li pc-menu">
+              <ul>
+                <li><a class="hov_nav_w" href="#aboutus">ABOUT US</a></li>
+                <li><a class="hov_nav_w" href="#news">NEWS</a></li>
+                <li><a class="hov_nav_w" href="photo.html">PHOTO</a></li>
+                <li><a class="hov_nav_w" href="shop.html">ONLINE SHOP</a></li>
+                <li><a class="hov_nav_w" href="#access">ACCESS</a></li>
+                <li><a class="hov_nav_w" href="contact.php">CONTACT</a></li>
+                <li><a href="https://www.instagram.com/u_cafe_201710/?hl=ja" target="_blank"><img src="img/glyph-logo_white.png" alt="白"><img class="insta_hov" src="img/glyph-logo_May2016.png" alt="黒"></a></li>
+              </ul>
+            </div>
+            <div class="nav_li sp-menu">
               <ul>
                 <li><a class="hov_nav_w" href="#aboutus">ABOUT US</a></li>
                 <li><a class="hov_nav_w" href="#news">NEWS</a></li>
@@ -64,8 +83,8 @@
           「料理も、デザートも、コーヒーも美味しいカフェってどこかな。」<br>
           「ないなら自分でつくっちゃえ！」<br>
           　元パティシエだった僕が、こだわりをつめこんだカフェを作りました。<br>
-          　旬のものを、旬のときに。<br>
-          　心と体が喜ぶカフェを目指しています。
+          　旬なものを、旬なときに。<br>
+          　ココロとカラダが喜ぶカフェを目指しています。
           </p>
         </div>
       </div>
@@ -79,10 +98,10 @@
         <div class="btn-4 fadeUpTrigger"><a href="#">READ MORE</a></div>
       </div>
       <div id="news_a" class="ta-l fadeUpTrigger">
-        <p class="mb_35"><span>日付</span>ここにニュースが入ります</p>
-        <p class="mb_35"><span>日付</span>ここにニュースが入ります</p>
-        <p class="mb_35"><span>日付</span>ここにニュースが入ります</p>
-        <p><span>日付</span>ここにニュースが入ります</p>
+        <p class="mb_35"><span>2021/08/09</span>週替わりランチは、グリーンカレーです</p>
+        <p class="mb_35"><span>2021/08/06</span>数量限定でスイカパフェはじめました</p>
+        <p class="mb_35"><span>2021/08/02</span>週替わりランチは、ナスのトマトソースパスタです</p>
+        <p><span>2021/07/25</span>桃パフェ提供開始しました</p>
       </div>
     </div>
 
