今からハンバーガーメニュー固定

--- a/shop.html
+++ b/shop.html
@@ -35,7 +35,7 @@
                 <li><a class="hov_nav_b" href="shop.html">ONLINE SHOP</a></li>
                 <li><a class="hov_nav_b" href="index.html#access">ACCESS</a></li>
                 <li><a class="hov_nav_b" href="contact.php">CONTACT</a></li>
-                <li><a href="https://www.instagram.com/u_cafe_201710/?hl=ja" target="_blank"><img src="img/glyph-logo_white.png" alt="白"><img class="insta_hov" src="img/glyph-logo_May2016.png" alt="黒"></a></li>
+                <li><a href="https://www.instagram.com/u_cafe_201710/?hl=ja" target="_blank"><img src="img/glyph-logo_May2016.png" alt="黒"><img class="insta_hov" src="img/insta_color.png" alt="カラー"></a></li>
               </ul>
             </div>
           </div>
