ナビゲーション固定
おk

--- a/photo.html
+++ b/photo.html
@@ -22,9 +22,8 @@
     <!-- headerー -->
     <header>
       <div class="header_under_index header_under_index-bk mb_50">
-        <div class="inner">
           <!-- nav -->
-          <div class="nav">
+          <div class="nav bg_w">
             <h1><a class="hov" href="/"><img src="img/u-cafe-logo_black.png" alt="黒ロゴ。u-cafe.あなたとわたしのカフェ。| 熊本市東区"></a></h1>
             <!-- ヘッダーナビ 項目部分 -->
             <div class="nav_li">
@@ -39,13 +38,12 @@
               </ul>
             </div>
           </div>
-        </div>
-        <!-- .inner div -->
+
       </div>
     </header>
     <main>
       <div class="inner cen">
-        <h2 class="fadeUpTrigger">Photo</h2>
+        <h2 class="fadeUpTrigger mt_100">Photo</h2>
         <p class="sub_t fadeUpTrigger">オイシイ記録。</p>
         <div id="photo_inner" class="d-f fd-c ai-c">
           <img loading="lazy" class="d-b fadeUpTrigger" src="img/kari/a2.jpg" alt="">
