--- a/shop.html
+++ b/shop.html
@@ -22,10 +22,9 @@
     <!-- header -->
     <header class="head-bg-img-shop">
       <div class="header_under_indx">
-        <div class="inner">
           <!-- nav -->
-          <div class="nav">
-            <h1><a class="hov" href="/"><img src="img/u-cafe-logo_white.png" alt="ロゴ。u-cafe.あなたとわたしのカフェ。| 熊本市東区"></a></h1>
+          <div class="nav bg_w">
+            <h1><a class="hov" href="/"><img src="img/u-cafe-logo_black.png" alt="黒ロゴ。u-cafe.あなたとわたしのカフェ。| 熊本市東区"></a></h1>
             <!-- header nav ul li -->
             <div class="nav_li">
               <ul>
@@ -39,8 +38,7 @@
               </ul>
             </div>
           </div>
-        </div>
-        <!-- .inner div -->
+
       </div>
     </header>
     <div class="inner d-f fd-c ai-c" id="shop_inner">
