--- a/index.html
+++ b/index.html
@@ -23,49 +23,31 @@
     <div id="splash">
       <div id="splash_logo"><img src="img/u-cafe_maki.png" alt="" class="fadeUp"></div>
       <!--/splash--></div>
+
     <!--  header -->
     <header class="head-bg-img">
       <div class="header_under_indx">
-        <div class="inner">
+
           <!-- nav -->
-          <div class="nav">
+          <div class="nav bg_b">
             <h1><a class="hov" href="/"><img src="img/u-cafe-logo_white.png" alt="ロゴ。u-cafe.あなたとわたしのカフェ。| 熊本市東区"></a></h1>
-            <!-- ハンバーガーメニューボタン -->
-            <div class="toggle">
-                <div>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
-            </div>
             <!-- header nav ul li -->
-            <div class="nav_li pc-menu">
+            <div class="nav_li">
               <ul>
-                <li><a class="hov_nav_w" href="#aboutus">ABOUT US</a></li>
-                <li><a class="hov_nav_w" href="#news">NEWS</a></li>
+                <li><a class="hov_nav_w" href="index.html#aboutus">ABOUT US</a></li>
+                <li><a class="hov_nav_w" href="index.html#news">NEWS</a></li>
                 <li><a class="hov_nav_w" href="photo.html">PHOTO</a></li>
                 <li><a class="hov_nav_w" href="shop.html">ONLINE SHOP</a></li>
-                <li><a class="hov_nav_w" href="#access">ACCESS</a></li>
+                <li><a class="hov_nav_w" href="index.html#access">ACCESS</a></li>
                 <li><a class="hov_nav_w" href="contact.php">CONTACT</a></li>
-                <li><a href="https://www.instagram.com/u_cafe_201710/?hl=ja" target="_blank"><img src="img/glyph-logo_white.png" alt="白"><img class="insta_hov" src="img/glyph-logo_May2016.png" alt="黒"></a></li>
-              </ul>
-            </div>
-            <div class="nav_li sp-menu">
-              <ul>
-                <li><a class="hov_nav_w" href="#aboutus">ABOUT US</a></li>
-                <li><a class="hov_nav_w" href="#news">NEWS</a></li>
-                <li><a class="hov_nav_w" href="photo.html">PHOTO</a></li>
-                <li><a class="hov_nav_w" href="shop.html">ONLINE SHOP</a></li>
-                <li><a class="hov_nav_w" href="#access">ACCESS</a></li>
-                <li><a class="hov_nav_w" href="contact.php">CONTACT</a></li>
-                <li><a href="https://www.instagram.com/u_cafe_201710/?hl=ja" target="_blank"><img src="img/glyph-logo_white.png" alt="白"><img class="insta_hov" src="img/glyph-logo_May2016.png" alt="黒"></a></li>
+                <li><a href="https://www.instagram.com/u_cafe_201710/?hl=ja" target="_blank"><img src="img/glyph-logo_white.png" alt="白"><img class="insta_hov" src="img/insta_color.png" alt="カラー"></a></li>
               </ul>
             </div>
           </div>
-        </div>
-        <!-- .inner div -->
+
       </div>
     </header>
+
     <main>
     <div class="inner">
     <!-- About Us カフェ紹介-->
@@ -92,16 +74,18 @@
     <!-- #about us -->
 
     <!-- News -->
-    <div id="news" class="fadeUpTrigger">
-      <div class="tandb">
-        <h2 class="fadeUpTrigger">News</h2>
-        <div class="btn-4 fadeUpTrigger"><a href="#">READ MORE</a></div>
-      </div>
-      <div id="news_a" class="ta-l fadeUpTrigger">
-        <p class="mb_35"><span>2021/08/09</span>週替わりランチは、グリーンカレーです</p>
-        <p class="mb_35"><span>2021/08/06</span>数量限定でスイカパフェはじめました</p>
-        <p class="mb_35"><span>2021/08/02</span>週替わりランチは、ナスのトマトソースパスタです</p>
-        <p><span>2021/07/25</span>桃パフェ提供開始しました</p>
+    <div id="news">
+      <div class="news" class="fadeUpTrigger">
+        <div class="tandb">
+          <h2 class="fadeUpTrigger">News</h2>
+          <div class="btn-4 fadeUpTrigger"><a href="#">READ MORE</a></div>
+        </div>
+        <div id="news_a" class="ta-l fadeUpTrigger">
+          <p class="mb_35"><span>2021/08/09</span>週替わりランチは、グリーンカレーです</p>
+          <p class="mb_35"><span>2021/08/06</span>数量限定でスイカパフェはじめました</p>
+          <p class="mb_35"><span>2021/08/02</span>週替わりランチは、ナスのトマトソースパスタです</p>
+          <p><span>2021/07/25</span>桃パフェ提供開始しました</p>
+        </div>
       </div>
     </div>
 
